<resources>
    <string name="app_name">PlaceKeeper</string>

    <!-- Auth -->
    <string name="title_login">Login</string>
    <string name="title_register">Create Account</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="link_register">Don\'t have an account? Register</string>
    <string name="link_login">Already have an account? Login</string>
    <string name="login_with_google">Login with Google</string>

    <!-- Place Management -->
    <string name="title_add_place">Add New Place</string>
    <string name="title_edit_place">Edit Place</string>
    <string name="hint_place_name">Place Name *</string>
    <string name="hint_note">Note (optional)</string>
    <string name="hint_latitude">Latitude *</string>
    <string name="hint_longitude">Longitude *</string>

    <!-- Buttons -->
    <string name="btn_save">Save Place</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_current_location">Use Current Location</string>

    <!-- Main Screen -->
    <string name="msg_empty_list">No places saved yet.\nTap + to add one!</string>
    <string name="desc_add_place">Add Place</string>

    <!-- Dialogs -->
    <string name="confirm_delete_title">Delete Place</string>
    <string name="confirm_delete_msg">Are you sure you want to delete this place?</string>

    <!-- Menus -->
    <string name="menu_logout">Logout</string>
    <string name="menu_map">View Map</string>

    <!-- Errors & Messages -->
    <string name="error_location_permission">Location permission is required to use this feature.</string>
    <string name="label_tags">Tags</string>
    <string name="hint_add_tag">Add a tag and press Enter</string>
    <string name="label_photo">Photo</string>
    <string name="btn_add_photo">Add Photo</string>
    <string name="msg_photo_uploading">Uploading photo...</string>
    <string name="msg_photo_uploaded">Photo uploaded successfully</string>
    <string name="msg_photo_error">Error uploading photo</string>
    <string name="title_place_details">Place Details</string>
    <string name="btn_share">Share Place</string>
    <string name="added_date">Added: %1$s</string>
    <string name="added_just_now">Added: Just now</string>
</resources>